--- a/archives/style.css
+++ b/archives/style.css
@@ -8,28 +8,16 @@
 
 body {
     min-height: 100vh;
+    background: #e7e7e5;
+    font-family: 'Iosevka Web';
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main {
-    height: 100vh;
-    width: 100%;
-    position: relative;
-}
-
-.container {
-    height: 400px;
-    width: fit-content;
-    margin: 20px;
-}
-
-h1 {
-    font-family: 'Lato', sans-serif;
-    border-left: 4px solid burlywood;
-    text-indent: 0.3em;
-}
-
-.post, p {
-    display: block;
-    margin-top: 20px;
-    font-family: 'Iosevka Web';
+    height: 96vh;
+    width: 98%;
+    background: #f7f5f4;
+    border: 6px solid #dedcda;
 }
