--- a/style.css
+++ b/style.css
@@ -8,16 +8,8 @@
 
 body {
     min-height: 100vh;
-}
-
-.bg {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background-image: url('assets/img/halftone_background_11.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;  
-    filter: opacity(0.02);
+    background: #e7e7e5;
+    font-family: 'Iosevka Web';
 }
 
 main {
@@ -30,21 +22,61 @@ main {
     position: relative;
 }
 
-h1 {
-    font-family: 'Lato', sans-serif;
+.terminal {
+    height: 400px;
+    width: 700px;
+    background: #f7f5f4;
+    border: 6px solid #dedcda;
 }
 
-span {
-    font-family: 'Iosevka Web';
+.neofetch {
+    width: 100%;
+    height: 350px;
+    display: flex;
 }
 
-hr {
-    width: 200px;
-    margin: 20px 0px;
-    border: 2px solid black;
+.image {
+    height: 100%;
+    width: fit-content;
 }
 
-.ufsc {
+#ufsc {
     position: relative;
-    height: 200px;
+    width: 250px;
+    filter: grayscale(1);
+    margin: 20px;
+}
+
+.text {
+    width: 410px;
+    height: 100%;
+}
+
+.text-content {
+    margin: 20px;
+    overflow: hidden;
+}
+
+#bold {
+    font-weight: bold;
+}
+
+#palette {
+    margin-top: 20px;
+}
+
+#shell-text {
+    margin-left: 20px;
+}
+
+input {
+    border: 0;
+    outline: 0;
+    background: #f7f5f4;
+    width: 600px;
+    font-family: 'Iosevka Web' !important;
+}
+
+input:focus {
+    outline: none !important;
 }
