--- a/archives/style.css
+++ b/archives/style.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css');
 
+@media only screen and (max-width: 800px) {
+
+    #image {
+        display: none;
+    }
+
+}
+
 * {
     padding: 0;
     margin: 0;
