--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css');
 
+
+@media only screen and (max-width: 800px) {
+   
+    .terminal {
+        width: 400px;
+        height: 900px;
+    }
+
+    .image {
+        display: none;
+    }
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -27,34 +41,36 @@ main {
     width: 700px;
     background: #f7f5f4;
     border: 6px solid #dedcda;
+    overflow: scroll;
 }
 
 .neofetch {
     width: 100%;
-    height: 350px;
+    height: 80%;
     display: flex;
+    position: relative;
 }
 
 .image {
     height: 100%;
-    width: fit-content;
+    width: 40%;
 }
 
 #ufsc {
     position: relative;
-    width: 250px;
+    width: 90%;
     filter: grayscale(1);
     margin: 20px;
 }
 
 .text {
-    width: 410px;
+    width: 60%;
     height: 100%;
 }
 
 .text-content {
+    height: 100%;
     margin: 20px;
-    overflow: hidden;
 }
 
 #bold {
@@ -65,16 +81,16 @@ main {
     margin-top: 20px;
 }
 
-#shell-text {
-    margin-left: 20px;
+.shell {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
 }
 
-input {
-    border: 0;
-    outline: 0;
-    background: #f7f5f4;
-    width: 600px;
-    font-family: 'Iosevka Web' !important;
+#shell-text {
+    margin-left: 20px;
+    font-size: 0.8em;
 }
 
 input:focus {
