--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 @media only screen and (max-width: 800px) {
    
     .terminal {
-        width: 400px;
-        height: 900px;
+        max-width: 400px;
+        max-height: 900px;
     }
 
     .image {
