--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ main {
 }
 
 .content {
-    height: 20%;
-    width: 20%;
+    height: 200px;
+    width: 400px;
     background: #f7f5f4;
     border: 6px solid #dedcda;
     overflow: scroll;
